@@ -548,6 +548,49 @@ name|q
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testFacetSort
+specifier|public
+name|void
+name|testFacetSort
+parameter_list|()
+block|{
+name|SolrQuery
+name|q
+init|=
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"dog"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"expected default value to be true"
+argument_list|,
+name|q
+operator|.
+name|getFacetSort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|q
+operator|.
+name|setFacetSort
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"expected set value to be false"
+argument_list|,
+name|q
+operator|.
+name|getFacetSort
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
